--- a/CodePortfolio.html
+++ b/CodePortfolio.html
@@ -1,8 +1,17 @@
-//leerportfolioS4
+<!--library
+https://www.w3schools.com/html/tryit.asp?filename=tryhtml_input_color
+https://www.w3schools.com/html/tryit.asp?filename=tryhtml_input_number-->
 <html>
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-        <script src="https://unpkg.com/vue"></script>
+        <script src="LibraryCss.js"></script>
     </head>
+    <body>
+        <button id="hoi" type="button" onclick="extracolor(0, 50)">Button</button>
+        <script  src="LibraryCss.js">
+        checkelement();
+        editSize();
+    </script>
+    </body>
+    
 </html>
